# react-fastapi-pyodide

./: .gitignore  LICENSE  PACKAGES_README.md  PAGE_GENERATION_APPROACHES.md  PAGE_GENERATOR_SUMMARY.md  README.md  clean_pages.py  fix_pages.py  index.html  package-lock.json  package.json  serve.json  test_endpoints.py  vite.config.ts
.github/workflows/: deploy-gh-pages.yml
apps/backend/: pyproject.toml
apps/backend/scripts/: add_operation_ids.py  validate_operation_ids.py
apps/backend/src/: requirements.txt
apps/backend/src/app/: app_main.py  test_app.py
apps/backend/src/app/api/: __init__.py
apps/backend/src/app/api/v1/: __init__.py
apps/backend/src/app/core/: bridge.py  deps.py  logging.py  runtime.py  security.py  settings.py
apps/backend/src/app/db/: init_db.py  session.py
apps/backend/src/app/db/migrations/: env.py
apps/backend/src/app/domains/: __init__.py
apps/backend/src/app/domains/dashboard/: __init__.py  router.py
apps/backend/src/app/domains/posts/: models.py
apps/backend/src/app/domains/system/: __init__.py  router.py
apps/backend/src/app/domains/users/: models.py  router.py  service.py
apps/backend/src/app/tests/: pytest.ini
apps/backend/src/app/tests/integration/: test_api.py
apps/backend/src/app/tests/unit/: test_users.py
apps/frontend/: index.html  package.json  tsconfig.json  (+1 more)
public/: sw.js
scripts/: copy-api-files.js  dev-gh-pages.js  generate-app-routing.py  generate-client.js  generate-pages-enhanced.py  generate-pages-ts.js  generate-workflow.js  get-repo-base.js  preview-gh-pages.js  start-server.js
(+89 files in other folders)
